<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Center</string>

    <!-- GCM -->
    <string name="gcm_registered">[GCM OK] device successfully registered!</string>
    <string name="gcm_unregistered">[GCM OK] device successfully unregistered!</string>
    <string name="gcm_message">[GCM MESSAGE] you got message!</string>
    <string name="gcm_error">[GCM ERROR] %1$s.</string>
    <string name="gcm_recoverable_error">[GCM ERROR] recoverable error (%1$s).</string>
    <string name="gcm_deleted">[GCM INFO] server deleted %1$d pending messages!</string>

    <!-- Appspot Server -->
    <!-- <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Appspot Server.</string> -->
    <string name="server_registered">[APPSPOT OK] successfully login to server</string>
    <!-- <string name="server_unregistered">From Appspot Server: successfully removed device!</string> -->
    <string name="server_register_error">[APPSPOT ERROR] Could not register device on Server after %1$d attempts.</string>
    <string name="server_unregister_error">[APPSPOT ERROR] Could not unregister device on Server (%1$s).</string>

    <!-- Menu options -->
    <string name="menu_add_msg">Add Msg</string>
    <string name="menu_update_msgs">Update Msgs</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>

    <!-- Restaurant Activity -->
    <string name="title_activity_restaurant">Restaurant Info</string>
    <string name="title_activity_branch">Branch Info</string>
    <string name="title_activity_branch_map">Map</string>
    <string name="title_order_confirmation">Total Price:</string>

    <!-- Order Confirm Activity -->
    <string name="order_confirm_menu_ok">Confirm!</string>
    <string name="order_success">Order Succes!</string>
    <string name="makeing_order">Making Order ...</string>
    <string name="makeing_order_retry">Making Order ... (Retry %1$d)</string>
    <string name="subtitle_order_confirmation">Service:</string>
    
    <!-- LoginActivity -->
    <string name="title_activity_login">Login Options</string>
    
    <!-- HistoryActivity -->
    <string name="title_activity_history">Orders History</string>
    <string name="history_loading">Loading Order History</string>
	<string name="swipe_down_to_load_more">Swipe down to get more ...</string>    
	
    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the server.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Food Center</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="exit">Close</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To Server</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add Account..</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>

    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected as %1$s.  To disconnect, press the button below.</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_signout">Sign Out</string>
    <string name="default_desc">This is ignored desc</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Restaurant</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="unknown_user">Unknown User</string>
    <string name="rest_branches_header">Branches</string>
    <string name="rest_info_header">Restaurant Info</string>
    <string name="rest_info_txt">Restaurant Info will be shown here</string>
    <string name="rest_info_img">Restaurant Image here</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="load_restaurants">Loading restaurants ...</string>
    <string name="load_restaurant">Loading restaurant info ...</string>
    <string name="load_order_history">Loading History...</string>
    <string name="course_name">Course Name</string>
    <string name="course_price">Price</string>
    <string name="course_cnt">#</string>
    <string name="course_info">No info was enterd for this course</string>
    <string name="category_name">Category</string>
    <string name="total_price">Total Price:</string>
    <string name="press_to_select">To select - swipe items to the right</string>
    <string name="branch_menu_table">Table</string>
    <string name="branch_menu_takeaway">Take-Away</string>
    <string name="branch_menu_delivery">Delivery</string>
    <string name="branch_drawer_call">Call Now!</string>
    <string name="branch_location_addr">Branch Location streed and city </string>
    <string name="order_order_date">2013.08.15 14:00</string>
    <string name="order_order_delivery_date">Not Delivered</string>

    <!-- API Keys created by GAE Api consule and needed by the app -->
    <string name="android_api_key"></string>
    <string name="browser_api_key">AIzaSyD304OJtRcgd-t5L6hsDDJxDgYXOdVzQVw</string>
</resources>