<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/branch_view_list_item"
    android:layout_width="match_parent"
    android:layout_height="75sp"
    android:background="?android:attr/activatedBackgroundIndicator" >

    <TextView
        android:id="@+id/branch_view_list_item_txt"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10sp"
        android:clickable="false"
        android:focusable="false"
        android:paddingLeft="5sp"
        android:text="@string/course_name"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/branch_view_list_item_cnt"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10sp"
        android:clickable="false"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/course_cnt"
        android:textSize="16sp" >
    </EditText>

    <TextView
        android:id="@+id/branch_view_list_item_price"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignParentTop="true"
        android:layout_margin="10sp"
        android:layout_toLeftOf="@id/branch_view_list_item_cnt"
        android:text="@string/course_price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/branch_view_list_item_info"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="20sp"
        android:gravity="left"
        android:maxLines="2"
        android:text="@string/course_info"
        android:textSize="14sp"
        android:textColor="@android:color/secondary_text_light" />

</RelativeLayout>